2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x0F: Data compression page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from USB Mass Storage Class - UFI Command
	  Specification

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1C subpage 0x01: Background Control
	  mode page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SBC-3.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SBC-2.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 10h for direct-access
	  devices.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ah subpage 01h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SPC-5.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SPC-3.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Ah subpage 01h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Prevent decoding subpages on subpage 00h decoders.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ah.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ch.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SFF-8020i.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 2Ah.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 06h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs: